...
            android:id="@+id/myAccountPicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/contDescInsertOffer" />

        <TextView
            android:id="@+id/goToProfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/profil"
            android:textColor="@color/white"
...
        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="#445964" />

        <TextView
            android:id="@+id/goToMyOffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/myOfferShop"
            android:textColor="@color/white"
            android:textSize="16sp" />
...
        <View
            android:layout_width="75dp"
            android:layout_height="1dp"
            android:background="#445964" />

        <TextView
            android:id="@+id/goToMyStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/myStats"
            android:textColor="@color/white"
            android:textSize="16sp" />
...
        <View
            android:layout_width="75dp"
            android:layout_height="1dp"
            android:background="#445964" />

        <TextView
            android:id="@+id/goToContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/contactUs"
            android:textColor="@color/white"
            android:textSize="16sp" />
...
