<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_influencer"
    tools:context=".ui.view.feed.FeedInf">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_vertical_start_feed_inf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_horizontal_feed_inf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <TextView
        android:id="@+id/titleFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_margin_vertical_start_feed_inf"
        app:layout_constraintTop_toBottomOf="@id/guideline_margin_horizontal_feed_inf" />

    <TextView
        android:id="@+id/pb_feed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/noFeed"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/guideline_margin_vertical_start_feed_inf"
        app:layout_constraintTop_toBottomOf="@id/guideline_margin_horizontal_feed_inf" />

    <ScrollView
        android:id="@+id/feedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guideline_margin_vertical_start_feed_inf"
        app:layout_constraintTop_toBottomOf="@id/titleFeed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/offresTendances"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/icon_tendances" />

            <TextView
                android:id="@+id/pb_feed_offer_tendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/noOffreTendance"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFeedListOffresTendances"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/offresPopulaires"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/icon_populaires" />

            <TextView
                android:id="@+id/pb_feed_offer_populaire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/noOffrePopulaire"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFeedListOffresPopulaires"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/offresNotes"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/icon_notes" />

            <TextView
                android:id="@+id/pb_feed_offer_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/noOffreNotes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFeedListOffresNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/shopTendances"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/icon_tendances" />

            <TextView
                android:id="@+id/pb_feed_shop_tendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/noShopTendance"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFeedListShopTendances"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/shopPopulaires"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/icon_populaires" />

            <TextView
                android:id="@+id/pb_feed_shop_populaire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/noShopPopulaire"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFeedListShopPopulaires"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/shopNotes"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/icon_notes" />

            <TextView
                android:id="@+id/pb_feed_shop_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="140dp"
                android:padding="25dp"
                android:text="@string/noShopNotes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFeedListShopNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="140dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>