...
            android:layout_marginBottom="10dp"
            android:alpha="0.5"
            android:background="#252D40"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchKeyword"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:imeOptions="actionSearch"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerListOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="70dp" />
    </LinearLayout>
...
