...
                android:text="@string/noInfPopulaire"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFeedListInfPopulaires"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp" />

...
                android:text="@string/noInfNotes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFeedListInfNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="140dp" />
        </LinearLayout>
...
